@@ -7,6 +7,7 @@
     this.on_connect_commands = [];
     this.protocol = "unknown";
     this.state = "disconnected";
+    this.wantedState = "connect";
     this.url = "";
     this.on("message", this._onMessage);
     this.on("sent", this._onSent);
@@ -76,7 +77,7 @@
     var self = this;
 
     // It is currently not possible to specify "name"
-    var attrs = {url: this.url, on_connect_commands: this.on_connect_commands};
+    var attrs = {url: this.url, on_connect_commands: this.on_connect_commands, state: this.wantedState};
 
     if (this.connection_id) {
       Convos.api.updateConnection({body: attrs, connection_id: this.connection_id}, function(err, xhr) {
