@@ -4,6 +4,7 @@ Revision history for perl distribution Convos
  - Fix use of CONVOS_ORGANIZATION_URL #307
  - Fix unread count should not be increased on join/part/quit/... messages
  - Fix going from "disconnected" to "reconnect" on connection save
+ - Add connection state selector to connection editor
  - Change "Profile" to open in main dialog area
  - Change "Help" to open in main dialog area
  - Tweaking colors
